<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.ProfilFragment"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white">

            <ImageView
                android:id="@+id/photo_profile"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="30dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_image_black_24dp"/>

            <Button
                android:id="@+id/btnEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_edit"
                android:layout_alignParentRight="true"/>

            <TextView
                android:id="@+id/txt_nama"
                android:layout_below="@id/photo_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                android:text="@string/nama"
                android:textSize="30sp"/>

            <TextView
                android:id="@+id/txt_lokasi"
                android:layout_below="@+id/txt_nama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:drawableLeft="@drawable/lokasi"
                android:text="@string/lokasi"
                android:textSize="20sp"
                android:layout_marginBottom="15dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/lytBio"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:background="@drawable/background_relative_profile">

            <TextView
                android:id="@+id/title_bio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="0dp"
                android:text="@string/title_bio"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_bio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/title_bio"
                android:text="@string/txt_bio"
                android:textSize="15sp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/lytEmail"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:background="@drawable/background_relative_profile">

            <TextView
                android:id="@+id/title_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_email"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/txt_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/title_email"
                android:text="@string/txt_email"
                android:textSize="15sp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/lytNotelp"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:background="@drawable/background_relative_profile">

            <TextView
                android:id="@+id/title_notelp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_telp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/txt_notelp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/title_notelp"
                android:text="@string/txt_telp"
                android:textSize="15sp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/lytUmur"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:background="@drawable/background_relative_profile">

            <TextView
                android:id="@+id/title_umur"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_umur"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txt_umur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_below="@id/title_umur"
                android:text="@string/txt_umur"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/lytBerat"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:background="@drawable/background_relative_profile">

            <TextView
                android:id="@+id/title_berat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_berat"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/txt_berat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_below="@id/title_berat"
                android:text="@string/txt_berat"
                android:textSize="15sp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/lytTinggi"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:background="@drawable/background_relative_profile">

            <TextView
                android:id="@+id/title_tinggi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_tinggi"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/txt_tinggi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_below="@id/title_tinggi"
                android:text="@string/txt_tinggi"
                android:textSize="15sp"/>
        </RelativeLayout>

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:text="Logout"
            android:onClick="logout"/>

    </LinearLayout>


</FrameLayout>